tests/shouldFail/j017c.c
int main(void){
	unsigned char x;
	double y = 300;
	x = y;
	return 0;
}
